syntax = "proto2";

package org.corfudb.runtime;
option java_package = "org.corfudb.runtime";

import "google/protobuf/descriptor.proto";

// Option tags to be used by the CorfuStore consumers to tag special fields to be detected by Corfu.
message SchemaOptions {
    // Secondary keys to be indexed.
    optional bool secondary_key_deprecated = 1;
    // Version number in metadata field.
    optional bool version = 2;
    // Should this table be backed up by Corfu.
    optional bool requires_backup_support = 3;
    // Should this table be log replicated over to remote sink site using corfu log replication.
    optional bool is_federated = 4;
    // Tag tables with unique stream listener tags for selectivity in receiving change notifications.
    repeated string stream_tag = 5;
    // Nested Secondary Key (repeated field)
    repeated SecondaryIndex secondary_key = 6;
}

message SecondaryIndex {
    // Full Qualified Name / Path
    required string index_path = 1;
    // Index Name (alias)
    optional string index_name = 2;
}

// Field options to be extended in the user's protobuf fields.
extend google.protobuf.FieldOptions {
    // 1036 is in the extendable range in the descriptor.proto.
    optional SchemaOptions schema = 1036;
}

// Message options to be extended in the user's protobuf messages.
extend google.protobuf.MessageOptions {
    // 1039 is in the extendable range in the descriptor.proto
    optional SchemaOptions table_schema = 1039;
}